# sagemaker-sentiment-analysis-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml  config.yml.archive  continue_config.yml
infra/: backend.tf  storage.tf  variables.tf
infra/circleci-oidc/: backend.tf  main.tf  variables.tf
infra/github-oidc/: main.tf  variables.tf
src/: __init__.py  inference.py  inference.py.archive  model.py
tests/: test_inference.py
