[tool.poetry]
name = "sagemaker_sentiment_api"
version = "0.1.0"
description = "SageMaker Sentiment Analysis API (portfolio project)"
authors = ["Akilesh Murugan <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
boto3 = "*"
sagemaker = "*"
transformers = "*"
datasets = "*"
torch = "*"
numpy = "*"
pandas = "*"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8-pyproject = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

