[tool.poetry]
name = "sagemaker_sentiment_api"
version = "0.1.0"
description = "SageMaker Sentiment Analysis API (portfolio project)"
authors = ["Akilesh Murugan <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
boto3 = "*"
sagemaker = ">=2.205.0,<2.210.0"
transformers = ">=4.41.0,<4.45.0"
torch = ">=2.3.0,<2.5.0"
datasets = "*"
numpy = "*"
pandas = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
black = ">=24.0.0"
flake8-pyproject = ">=1.2.3"
awscli = ">=1.32.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
